# applet

./: README.md
go/gogrep/: go.mod  help.txt  main.go  search_engine.go  server.go
js/: readMe.md
js/idiom/: idiom_dict.json  index.html  readMe.md  script.js
js/novelMerge/: main.js  manifest.json  readMe.md
python/: readMe.md
python/money/: money.py  pyproject.toml  readMe.md
python/zdhkClient/: app.py  config.json  readMe.md  ui.py  zdclient.py
