[tool.poetry]
name = "money"
version = "0.1.0"
description = "一个后端使用MongoDB的命令行记账小程序"
authors = ["FreeRUOK <2651688427@qq.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
typer = "^0.12.3"
pydantic = "^2.7.1"
pymongo = "^4.7.2"
psutil = "^5.9.8"
chardet = "^5.2.0"

[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
priority = "primary"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
